--- a/index.html
+++ b/index.html
@@ -4,9 +4,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Rock-Paper-Scissors</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="battleground">
+        <div class="score">
+            <div class="player">
+                <p class="label">Player</p>
+                <div id="player-score">0</div>
+            </div>
+
+            <div class="computer">
+                <p class="label">Computer</p>
+                <div id="computer-score">0</div>
+            </div>
+        </div>
+
+        <div class="round">
+            <button id="start">Start game</button>
+        </div>
+
+        <div class="buttons">
+            <button id="rock" disabled></button>
+            <button id="paper" disabled></button>
+            <button id="scissors" disabled></button>
+        </div>
+    </div>
+
+   
     
     <script src="script.js"></script>
 </body>
